* updated Chinese (Taiwan) translation (Jeff Huang)
* updated German translation (Ettore Atalan)
* updated Italian translation (Luigi Baldoni)
* updated Bulgarian translation (Kiril Kirilov)
* updated Greek translation (Dimitrios Glentadakis)

Version 0.35
* added color themes and style sheets from Lumina DE
* added some fixes for Qt Fusion style (burak)
* added feature to use GTK/KDE dialogs (requires Qt 5.9 or higher)
* added feature to copy style sheets
* added some error messages
* added feature to compile without D-Bus support 
* fixed style sheet list editing
* fixed tab order
* updated Russian translation
* updated Greek translation (Dimitrios Glentadakis)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated German translation (Ettore Atalan)
* updated Danish translation (scootergrisen)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated Bulgarian translation (Kiril Kirilov)
* updated Czech translation (fri)

Version 0.36
* added feature to start qt5ct application without
  QT_QPA_PLATFORMTHEME environment variable
* added Catalan translation (Toni Estévez)
* fixed issue with custom palette in some applications (thanks to Ari Fogel)
* fixed build without QtDBus module
* fixed crash due to conflict between gtk2 style and gtk3 dialogs
* updated Russian translation
* updated Greek translation (Dimitrios Glentadakis)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated German translation (Ettore Atalan)
* updated Danish translation (scootergrisen)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated Bulgarian translation (Kiril Kirilov)
* updated Czech translation (fri)
* updated Serbian translation (markosm)

Version 0.37
* added Qt 5.12 support
* added alpha channel for color themes
* added environment variables support for paths in the qt5ct.conf
* added mime-type based icons in the file dialog
* fixed icon theme parsing
* replaced deprecated code
* updated Russian translation